# xv6-rust

./: .gitignore  BUILDING.md  Makefile  info.txt
osmium/: Cargo.toml
osmium/xv6_defs/: Cargo.toml
osmium/xv6_defs/src/: c_structs.rs  c_types.rs  lib.rs  param.rs
osmium/xv6_kernel/: Cargo.toml
osmium/xv6_kernel/src/: c_defs.rs  kalloc.rs  lib.rs  memlayout.rs  riscv.rs  string.rs  sysproc.rs
osmium/xv6_user/cat/: Cargo.toml
osmium/xv6_user/cat/src/: lib.rs
osmium/xv6_user/echo/: Cargo.toml
osmium/xv6_user/echo/src/: lib.rs
osmium/xv6_user/hellorust/: Cargo.toml
osmium/xv6_user/hellorust/src/: lib.rs
osmium/xv6_user/sleep/: Cargo.toml
osmium/xv6_user/sleep/src/: lib.rs
osmium/xv6_user/uptime/: Cargo.toml
osmium/xv6_user/uptime/src/: lib.rs
osmium/xv6_user/xv6_ulib/: Cargo.toml
osmium/xv6_user/xv6_ulib/src/: c_user.rs  lib.rs
user/: cat.c.depr
